# learn_pico

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
